pred velkou zmenou

--- a/jupyter/relativizace-dat.ipynb
+++ b/jupyter/relativizace-dat.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "cd42457b",
    "metadata": {},
    "outputs": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "79c3bb41",
    "metadata": {},
    "outputs": [
@@ -66,53 +66,139 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "📉 dedup + 100 ms → 9,551,796 rows\n",
-      "✅ saved raw_lob_100ms.npy  (9551796, 41)\n"
+      "📥  loading raw_lob.npy …\n",
+      "⏱️   resampling to 1-second grid …\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\jiruszde\\AppData\\Local\\Temp\\ipykernel_16188\\605449284.py:42: FutureWarning: 'S' is deprecated and will be removed in a future version, please use 's' instead.\n",
+      "  df_1s = df.resample(\"1S\").last().ffill()\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ saved ..\\data\\processed\\my_nq\\raw_lob_1s.npy   955,180 rows × 41 cols\n",
+      "🔎  running sanity checks …\n",
+      "   • timestamp step OK\n",
+      "   • no NaN / Inf\n",
+      "   first 3 rows:\n",
+      " [[1.729e+09 2.051e+04 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00\n",
+      "  0.000e+00 0.000e+00 0.000e+00 0.000e+00 1.000e+00 0.000e+00 0.000e+00\n",
+      "  0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00\n",
+      "  2.051e+04 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00\n",
+      "  0.000e+00 0.000e+00 0.000e+00 1.000e+00 0.000e+00 0.000e+00 0.000e+00\n",
+      "  0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00]\n",
+      " [1.729e+09 2.051e+04 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00\n",
+      "  0.000e+00 0.000e+00 0.000e+00 0.000e+00 1.000e+00 0.000e+00 0.000e+00\n",
+      "  0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00\n",
+      "  2.051e+04 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00\n",
+      "  0.000e+00 0.000e+00 0.000e+00 1.000e+00 0.000e+00 0.000e+00 0.000e+00\n",
+      "  0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00]\n",
+      " [1.729e+09 2.051e+04 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00\n",
+      "  0.000e+00 0.000e+00 0.000e+00 0.000e+00 1.000e+00 0.000e+00 0.000e+00\n",
+      "  0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00\n",
+      "  2.051e+04 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00\n",
+      "  0.000e+00 0.000e+00 0.000e+00 1.000e+00 0.000e+00 0.000e+00 0.000e+00\n",
+      "  0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00]]\n",
+      "   last  3 rows:\n",
+      " [[1.730e+09 2.008e+04 2.008e+04 2.008e+04 2.008e+04 2.008e+04 2.008e+04\n",
+      "  2.007e+04 2.007e+04 2.007e+04 2.007e+04 2.000e+00 1.000e+00 3.000e+00\n",
+      "  4.000e+00 4.000e+00 4.000e+00 5.000e+00 5.000e+00 3.000e+00 5.000e+00\n",
+      "  2.008e+04 2.008e+04 2.008e+04 2.008e+04 2.008e+04 2.008e+04 2.008e+04\n",
+      "  2.008e+04 2.008e+04 2.008e+04 2.000e+00 1.000e+00 3.000e+00 3.000e+00\n",
+      "  2.000e+00 3.000e+00 3.000e+00 6.000e+00 3.000e+00 6.000e+00]\n",
+      " [1.730e+09 2.008e+04 2.008e+04 2.008e+04 2.008e+04 2.008e+04 2.008e+04\n",
+      "  2.007e+04 2.007e+04 2.007e+04 2.007e+04 2.000e+00 1.000e+00 3.000e+00\n",
+      "  4.000e+00 4.000e+00 4.000e+00 5.000e+00 5.000e+00 3.000e+00 5.000e+00\n",
+      "  2.008e+04 2.008e+04 2.008e+04 2.008e+04 2.008e+04 2.008e+04 2.008e+04\n",
+      "  2.008e+04 2.008e+04 2.008e+04 2.000e+00 1.000e+00 3.000e+00 3.000e+00\n",
+      "  2.000e+00 3.000e+00 3.000e+00 6.000e+00 3.000e+00 6.000e+00]\n",
+      " [1.730e+09 2.008e+04 2.008e+04 2.008e+04 2.008e+04 2.008e+04 2.008e+04\n",
+      "  2.007e+04 2.007e+04 2.007e+04 2.007e+04 2.000e+00 1.000e+00 3.000e+00\n",
+      "  4.000e+00 4.000e+00 4.000e+00 5.000e+00 5.000e+00 3.000e+00 5.000e+00\n",
+      "  2.008e+04 2.008e+04 2.008e+04 2.008e+04 2.008e+04 2.008e+04 2.008e+04\n",
+      "  2.008e+04 2.008e+04 2.008e+04 2.000e+00 1.000e+00 3.000e+00 3.000e+00\n",
+      "  2.000e+00 3.000e+00 3.000e+00 6.000e+00 3.000e+00 6.000e+00]]\n",
+      "🎉  resampling script finished successfully\n"
      ]
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
+    "#!/usr/bin/env python3\n",
+    "\"\"\"\n",
+    "resample_raw_lob_1s.py\n",
+    "──────────────────────\n",
+    "Load **raw_lob.npy** (millisecond-resolved seconds in col-0)  \n",
+    "and down-sample to an even 1-second grid.\n",
+    "\n",
+    "Output → raw_lob_1s.npy  \n",
+    "layout unchanged: ts (float64 sec) + 40 × float32 LOB features.\n",
+    "\"\"\"\n",
+    "\n",
     "from pathlib import Path\n",
     "\n",
-    "DATA_DIR = Path(\"../data/processed/my_nq\")\n",
-    "raw      = np.load(DATA_DIR / \"raw_lob.npy\", mmap_mode=\"r\")\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
     "\n",
+    "# ───────── paths ─────────\n",
+    "IN_PATH  = Path(\"../data/processed/my_nq/raw_lob.npy\")\n",
+    "OUT_DIR  = IN_PATH.parent\n",
+    "OUT_PATH = OUT_DIR / \"raw_lob_1s.npy\"\n",
+    "\n",
+    "# ───────── column names ─────────\n",
     "N_LEVELS = 10\n",
-    "COLS = ([\"ts\"] +\n",
+    "COLS = ([\"ts_sec\"] +\n",
     "        [f\"bid_px{i}\" for i in range(N_LEVELS)] +\n",
     "        [f\"bid_sz{i}\" for i in range(N_LEVELS)] +\n",
     "        [f\"ask_px{i}\" for i in range(N_LEVELS)] +\n",
-    "        [f\"ask_sz{i}\" for i in range(N_LEVELS)])\n",
+    "        [f\"ask_sz{i}\" for i in range(N_LEVELS)])  # total = 41\n",
     "\n",
-    "df = pd.DataFrame(raw, columns=COLS, copy=False)\n",
+    "# ───────── load ─────────\n",
+    "print(\"📥  loading raw_lob.npy …\")\n",
+    "raw = np.load(IN_PATH)                                   # (rows, 41)\n",
+    "df  = pd.DataFrame(raw, columns=COLS)\n",
     "\n",
-    "# df['ts'] is now float64 seconds with millisecond fractions\n",
-    "df[\"ts_dt\"] = pd.to_datetime(df[\"ts\"], unit=\"s\")\n",
+    "# ─── ts_sec → DateTime index ───\n",
+    "df.index = pd.to_datetime(df[\"ts_sec\"], unit=\"s\", utc=True)\n",
+    "df.drop(columns=\"ts_sec\", inplace=True)\n",
+    "df = df.sort_index()                                     # ensure chronological\n",
     "\n",
-    "# 1. drop consecutive duplicates\n",
-    "mask_change = (df.iloc[:, 1:] != df.iloc[:, 1:].shift()).any(axis=1)\n",
-    "df = df.loc[mask_change]\n",
+    "# ─── 1-second resample ───\n",
+    "print(\"⏱️   resampling to 1-second grid …\")\n",
+    "df_1s = df.resample(\"1S\").last().ffill()\n",
     "\n",
-    "# 2. resample to fixed 100 ms grid\n",
-    "df = (df.set_index(\"ts_dt\")\n",
-    "        .resample(\"100ms\", label=\"right\", closed=\"right\")\n",
-    "        .last()\n",
-    "        .ffill())\n",
+    "# ─── rebuild NumPy array ───\n",
+    "ts_sec = (df_1s.index.astype(\"int64\") // 1_000_000_000).astype(np.float64)\n",
+    "features = df_1s.astype(np.float32).to_numpy()\n",
+    "raw_1s   = np.column_stack([ts_sec, features])           # (rows, 41)\n",
     "\n",
-    "df.reset_index(drop=True, inplace=True)\n",
+    "# ─── save ───\n",
+    "np.save(OUT_PATH, raw_1s)\n",
+    "print(f\"✅ saved {OUT_PATH}   {raw_1s.shape[0]:,} rows × {raw_1s.shape[1]} cols\")\n",
     "\n",
-    "print(f\"📉 dedup + 100 ms → {len(df):,} rows\")\n",
-    "\n",
-    "raw_100ms = df[COLS].to_numpy(dtype=np.float32, copy=False)\n",
-    "np.save(DATA_DIR / \"raw_lob_100ms.npy\", raw_100ms)\n",
-    "print(f\"✅ saved raw_lob_100ms.npy  {raw_100ms.shape}\")\n"
+    "print(\"🔎  running sanity checks …\")\n",
+    "# 1) monotonic 1-second steps\n",
+    "diff = np.diff(raw_1s[:, 0])\n",
+    "assert np.all(diff == 1.0), \"timestamps are not strict 1-second increments\"\n",
+    "# 2) no NaN / inf\n",
+    "assert np.isfinite(raw_1s).all(), \"array contains NaN or ±Inf\"\n",
+    "print(\"   • timestamp step OK\")\n",
+    "print(\"   • no NaN / Inf\")\n",
+    "# 3) peek at head / tail\n",
+    "np.set_printoptions(precision=3, suppress=True)\n",
+    "print(\"   first 3 rows:\\n\", raw_1s[:3])\n",
+    "print(\"   last  3 rows:\\n\",  raw_1s[-3:])\n",
+    "print(\"🎉  resampling script finished successfully\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "77d34593",
    "metadata": {},
    "outputs": [
@@ -128,128 +214,7 @@
      ]
     }
    ],
-   "source": [
-    "#!/usr/bin/env python3\n",
-    "\"\"\"\n",
-    "make_labels_30s_fast.py\n",
-    "───────────────────────\n",
-    "Create binary labels for NQ DOM snapshots:\n",
-    "\n",
-    " label = 1  ⇐  within the next 30 s\n",
-    "                 • mid-price falls ≥ 4 ticks  (4 × 0.25 = 1.00 pt)\n",
-    "                 • AND never rises > 2 ticks (2 × 0.25 = 0.50 pt)\n",
-    " label = 0  otherwise\n",
-    "\n",
-    "Runs ~20–50× faster than a naive loop by using two monotone de-ques and Numba.\n",
-    "\"\"\"\n",
-    "\n",
-    "import numpy as np\n",
-    "from pathlib import Path\n",
-    "from numba import njit\n",
-    "from tqdm import tqdm\n",
-    "\n",
-    "# ───────────────────────────────────────────────────────────\n",
-    "# 1. CONFIGURATION\n",
-    "# ───────────────────────────────────────────────────────────\n",
-    "DATA_DIR   = Path(\"../data/processed/my_nq\")         # adjust if needed\n",
-    "RAW_FILE   = DATA_DIR / \"raw_lob_100ms.npy\"          # floats with ms ts\n",
-    "LABEL_FILE = DATA_DIR / \"labels_30s.npy\"\n",
-    "\n",
-    "N_LEVELS   = 10           # depth recorded in each side of book\n",
-    "TICK_SIZE  = 0.25         # CME NQ\n",
-    "DROP_TICKS = 4            # ≥ 4 ticks down → 1.00 pt\n",
-    "RISE_TICKS = 2            # ≤ 2 ticks up   → 0.50 pt\n",
-    "HORIZON_S  = 30.0         # 30-second horizon\n",
-    "\n",
-    "\n",
-    "# ───────────────────────────────────────────────────────────\n",
-    "# 2. FAST LABELLER (Numba)\n",
-    "# ───────────────────────────────────────────────────────────\n",
-    "@njit(cache=True)\n",
-    "def label_drop_rule(ts, mid,\n",
-    "                    tick_size, drop_ticks, rise_ticks, horizon):\n",
-    "    \"\"\"\n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    ts   : 1-D float64, seconds (ascending)\n",
-    "    mid  : 1-D float32/64, mid prices\n",
-    "    Returns\n",
-    "    -------\n",
-    "    labels : uint8 (0/1), same length as ts\n",
-    "    \"\"\"\n",
-    "    N = ts.shape[0]\n",
-    "    labels = np.zeros(N, np.uint8)\n",
-    "\n",
-    "    dq_min = np.empty(N, np.int64)   # stores indices of future mins\n",
-    "    dq_max = np.empty(N, np.int64)   # stores indices of future maxs\n",
-    "    head_min = head_max = 0\n",
-    "    tail_min = tail_max = 0\n",
-    "\n",
-    "    for i in range(N - 1, -1, -1):       # walk right → left\n",
-    "        # drop indices outside horizon\n",
-    "        while head_min < tail_min and ts[dq_min[head_min]] - ts[i] > horizon:\n",
-    "            head_min += 1\n",
-    "        while head_max < tail_max and ts[dq_max[head_max]] - ts[i] > horizon:\n",
-    "            head_max += 1\n",
-    "\n",
-    "        # window min / max (if deque empty, mid[i] is both)\n",
-    "        win_min = mid[dq_min[head_min]] if head_min < tail_min else mid[i]\n",
-    "        win_max = mid[dq_max[head_max]] if head_max < tail_max else mid[i]\n",
-    "\n",
-    "        # apply rule\n",
-    "        if (mid[i] - win_min >= drop_ticks * tick_size) and \\\n",
-    "           (win_max - mid[i] <= rise_ticks * tick_size):\n",
-    "            labels[i] = 1\n",
-    "\n",
-    "        # push current index into min-deque (monotone ↑)\n",
-    "        while tail_min > head_min and mid[dq_min[tail_min - 1]] >= mid[i]:\n",
-    "            tail_min -= 1\n",
-    "        dq_min[tail_min] = i\n",
-    "        tail_min += 1\n",
-    "\n",
-    "        # push into max-deque (monotone ↓)\n",
-    "        while tail_max > head_max and mid[dq_max[tail_max - 1]] <= mid[i]:\n",
-    "            tail_max -= 1\n",
-    "        dq_max[tail_max] = i\n",
-    "        tail_max += 1\n",
-    "\n",
-    "    return labels\n",
-    "\n",
-    "\n",
-    "# ───────────────────────────────────────────────────────────\n",
-    "# 3. LOAD RAW SNAPSHOTS\n",
-    "# ───────────────────────────────────────────────────────────\n",
-    "print(\"📥  Loading raw_lob_100ms.npy …\")\n",
-    "raw = np.load(RAW_FILE, mmap_mode=\"r\")                  # (N, 41)\n",
-    "\n",
-    "bid0_col = 1\n",
-    "ask0_col = 1 + 2 * N_LEVELS\n",
-    "\n",
-    "ts  = raw[:, 0].astype(np.float64)                      # float-seconds (ms kept)\n",
-    "mid = (raw[:, bid0_col] + raw[:, ask0_col]) / 2.0       # mid-price series\n",
-    "\n",
-    "print(f\"   → {len(ts):,} snapshots\")\n",
-    "\n",
-    "# ───────────────────────────────────────────────────────────\n",
-    "# 4. GENERATE LABELS (JIT + RUN)\n",
-    "# ───────────────────────────────────────────────────────────\n",
-    "print(\"⚙️  Compiling & running fast labeller …\")\n",
-    "# tiny warm-up to trigger JIT\n",
-    "_ = label_drop_rule(ts[:10], mid[:10],\n",
-    "                    TICK_SIZE, DROP_TICKS, RISE_TICKS, HORIZON_S)\n",
-    "\n",
-    "# full dataset\n",
-    "labels = label_drop_rule(ts, mid,\n",
-    "                         TICK_SIZE, DROP_TICKS, RISE_TICKS, HORIZON_S)\n",
-    "\n",
-    "# ───────────────────────────────────────────────────────────\n",
-    "# 5. SAVE\n",
-    "# ───────────────────────────────────────────────────────────\n",
-    "np.save(LABEL_FILE, labels)\n",
-    "pos = int(labels.sum())\n",
-    "print(f\"✅ Saved {LABEL_FILE}\\n\"\n",
-    "      f\"   positives: {pos:,}  ({pos/len(labels):.2%})\")\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -257,100 +222,14 @@
    "id": "9a442bce",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#!/usr/bin/env python3\n",
-    "\"\"\"\n",
-    "make_bucketed.py\n",
-    "────────────────\n",
-    "TLOB-style tokenisation for the resampled NQ DOM:\n",
-    "\n",
-    "    • price tokens  : relative tick distance from best bid / ask\n",
-    "    • size  tokens  : log-compressed volumes, quantile-bucketed\n",
-    "\n",
-    "Outputs\n",
-    "-------\n",
-    "bucketed_lob.npy  (int16)   ts | 2×N_LEVELS price_tok | 2×N_LEVELS size_tok\n",
-    "size_edges.npy    (float32) 129 boundaries used for the volume buckets\n",
-    "\"\"\"\n",
-    "\n",
-    "import numpy as np\n",
-    "from pathlib import Path\n",
-    "\n",
-    "# ───────────────────────────────────────────────────────────\n",
-    "# 1. paths & hyper-params\n",
-    "# ───────────────────────────────────────────────────────────\n",
-    "DATA_DIR     = Path(\"../data/processed/my_nq\")\n",
-    "RAW_FILE     = DATA_DIR / \"raw_lob_100ms.npy\"\n",
-    "BUCKET_FILE  = DATA_DIR / \"bucketed_lob.npy\"\n",
-    "EDGES_FILE   = DATA_DIR / \"size_edges.npy\"\n",
-    "\n",
-    "N_LEVELS   = 10           # depth recorded\n",
-    "TICK_SIZE  = 0.25         # CME NQ\n",
-    "MAX_TICKS  = 50           # clip ±50 → 0-100 token range\n",
-    "SZ_BUCKETS = 128          # number of volume buckets 0-127\n",
-    "\n",
-    "# ───────────────────────────────────────────────────────────\n",
-    "# 2. load float snapshots\n",
-    "# ───────────────────────────────────────────────────────────\n",
-    "raw = np.load(RAW_FILE, mmap_mode=\"r\")        # (N, 41)\n",
-    "\n",
-    "ts_col      = raw[:, :1]                      # keep as int64/float64\n",
-    "bid_px_idx  = np.arange(1, 1 + N_LEVELS)\n",
-    "bid_sz_idx  = np.arange(1 + N_LEVELS, 1 + 2*N_LEVELS)\n",
-    "ask_px_idx  = np.arange(1 + 2*N_LEVELS, 1 + 3*N_LEVELS)\n",
-    "ask_sz_idx  = np.arange(1 + 3*N_LEVELS, 1 + 4*N_LEVELS)\n",
-    "\n",
-    "# ───────────────────────────────────────────────────────────\n",
-    "# 3. PRICE TOKENISATION  (relative ticks)\n",
-    "# ───────────────────────────────────────────────────────────\n",
-    "best_bid = raw[:, bid_px_idx[0]][:, None]          # (N,1)\n",
-    "best_ask = raw[:, ask_px_idx[0]][:, None]\n",
-    "\n",
-    "rel_bid = np.round((best_bid - raw[:, bid_px_idx]) / TICK_SIZE)\n",
-    "rel_ask = np.round((raw[:, ask_px_idx] - best_ask) / TICK_SIZE)\n",
-    "rel_ticks = np.hstack([rel_bid, rel_ask]).astype(np.int16)\n",
-    "\n",
-    "# clip & shift to 0 … 100\n",
-    "rel_ticks = np.clip(rel_ticks, -MAX_TICKS, MAX_TICKS)\n",
-    "price_tok = (rel_ticks + MAX_TICKS).astype(np.int16)        # (N, 20)\n",
-    "\n",
-    "# ───────────────────────────────────────────────────────────\n",
-    "# 4. SIZE TOKENISATION  (log1p + quantile buckets)\n",
-    "# ───────────────────────────────────────────────────────────\n",
-    "log_sz   = np.log1p(raw[:, np.hstack([bid_sz_idx, ask_sz_idx])])\n",
-    "# build equiprobable edges\n",
-    "edges    = np.quantile(log_sz.ravel(), np.linspace(0, 1, SZ_BUCKETS + 1))\n",
-    "edges[0]  = -np.inf                                    # left-open\n",
-    "edges[-1] =  np.inf                                    # right-open\n",
-    "\n",
-    "size_tok = (np.searchsorted(edges, log_sz, \"right\") - 1).astype(np.int16)  # 0-127\n",
-    "\n",
-    "# sanity ranges\n",
-    "assert price_tok.min() >= 0 and price_tok.max() <= 2*MAX_TICKS\n",
-    "assert size_tok.min()  >= 0 and size_tok.max()  < SZ_BUCKETS\n",
-    "\n",
-    "# ───────────────────────────────────────────────────────────\n",
-    "# 5. assemble & save\n",
-    "# ───────────────────────────────────────────────────────────\n",
-    "bucketed = np.concatenate(\n",
-    "    [ts_col.astype(np.int64),       # keep timestamp\n",
-    "     price_tok,\n",
-    "     size_tok],\n",
-    "    axis=1).astype(np.int16, copy=False)      # ts stays int64 underneath mmap\n",
-    "\n",
-    "np.save(BUCKET_FILE, bucketed)\n",
-    "np.save(EDGES_FILE, edges.astype(np.float32))\n",
-    "\n",
-    "print(f\"✅ bucketed_lob.npy : {bucketed.shape}  (tokens)\")\n",
-    "print(f\"✅ size_edges.npy   : {len(edges)} edges (0-{SZ_BUCKETS-1} tokens)\")\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "TLOB Kernel",
    "language": "python",
-   "name": "python3"
+   "name": "tlob-env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -362,7 +241,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
