Pred upravou na volume svicky

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "8fe05d4d",
    "metadata": {},
    "outputs": [
@@ -11,18 +11,18 @@
      "output_type": "stream",
      "text": [
       "Daily CSVs already exist – skipping re‑split.\n",
-      "h=8s  TP=10t  down%=12.24%\n",
-      "h=8s  TP=10t  down%=13.03%\n",
-      "h=8s  TP=10t  down%=17.62%\n",
-      "h=10s  TP=10t  down%=14.58%\n",
-      "h=10s  TP=10t  down%=15.51%\n",
-      "h=10s  TP=10t  down%=20.28%\n",
-      "h=12s  TP=10t  down%=16.48%\n",
-      "h=12s  TP=10t  down%=17.59%\n",
-      "h=12s  TP=10t  down%=22.39%\n",
-      "h=16s  TP=10t  down%=19.65%\n",
-      "h=16s  TP=10t  down%=20.81%\n",
-      "h=16s  TP=10t  down%=25.29%\n",
+      "h=4s  TP=3t  down%=30.81%\n",
+      "h=4s  TP=3t  down%=31.76%\n",
+      "h=4s  TP=3t  down%=35.70%\n",
+      "h=6s  TP=3t  down%=34.27%\n",
+      "h=6s  TP=3t  down%=35.23%\n",
+      "h=6s  TP=3t  down%=38.75%\n",
+      "h=9s  TP=3t  down%=37.06%\n",
+      "h=9s  TP=3t  down%=38.37%\n",
+      "h=9s  TP=3t  down%=41.01%\n",
+      "h=30s  TP=3t  down%=42.52%\n",
+      "h=30s  TP=3t  down%=44.06%\n",
+      "h=30s  TP=3t  down%=45.69%\n",
       "Saved .npy files in C:\\Users\\jiruszde\\OneDrive\\Main\\1.Projects\\My\\Trading\\Jupyter\\2025-tlob\\data\\NQ\n"
      ]
     }
@@ -36,7 +36,7 @@
     "    split_rates = (0.5, 0.25, 0.25),            # shorter run\n",
     "    sampling_time = \"500ms\",\n",
     ")\n",
-    "builder.prepare_save_datasets(10)"
+    "builder.prepare_save_datasets(3, [4,6,9,30])"
    ]
   },
   {
