--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "8fe05d4d",
    "metadata": {},
    "outputs": [
@@ -10,19 +10,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Daily CSVs already exist – skipping re‑split.\n",
-      "h=4s  TP=3t  down%=30.81%\n",
-      "h=4s  TP=3t  down%=31.76%\n",
-      "h=4s  TP=3t  down%=35.70%\n",
-      "h=6s  TP=3t  down%=34.27%\n",
-      "h=6s  TP=3t  down%=35.23%\n",
-      "h=6s  TP=3t  down%=38.75%\n",
-      "h=9s  TP=3t  down%=37.06%\n",
-      "h=9s  TP=3t  down%=38.37%\n",
-      "h=9s  TP=3t  down%=41.01%\n",
-      "h=30s  TP=3t  down%=42.52%\n",
-      "h=30s  TP=3t  down%=44.06%\n",
-      "h=30s  TP=3t  down%=45.69%\n",
+      "Reading C:\\Users\\jiruszde\\OneDrive\\Main\\1.Projects\\My\\Trading\\Jupyter\\2025-tlob\\data\\raw-sierra\\dom-datatick.csv\n",
+      "  wrote NQ_2024-10-20.csv (2 rows)\n",
+      "  wrote NQ_2024-10-21.csv (43346 rows)\n",
+      "  wrote NQ_2024-10-22.csv (45386 rows)\n",
+      "  wrote NQ_2024-10-23.csv (59374 rows)\n",
+      "  wrote NQ_2024-10-24.csv (44694 rows)\n",
+      "  wrote NQ_2024-10-25.csv (55206 rows)\n",
+      "  wrote NQ_2024-10-27.csv (1106 rows)\n",
+      "  wrote NQ_2024-10-28.csv (41446 rows)\n",
+      "  wrote NQ_2024-10-29.csv (48424 rows)\n",
+      "  wrote NQ_2024-10-30.csv (50978 rows)\n",
+      "  wrote NQ_2024-10-31.csv (65096 rows)\n",
+      "  wrote NQ_2024-11-01.csv (52108 rows)\n",
+      "  wrote NQ_2024-11-03.csv (1580 rows)\n",
+      "  wrote NQ_2024-11-04.csv (49388 rows)\n",
+      "  wrote NQ_2024-11-05.csv (6392 rows)\n",
+      "h=4s  TP=3t  down%=36.32%\n",
+      "h=4s  TP=3t  down%=37.18%\n",
+      "h=4s  TP=3t  down%=38.68%\n",
+      "h=6s  TP=3t  down%=38.58%\n",
+      "h=6s  TP=3t  down%=39.68%\n",
+      "h=6s  TP=3t  down%=40.82%\n",
+      "h=9s  TP=3t  down%=40.64%\n",
+      "h=9s  TP=3t  down%=41.60%\n",
+      "h=9s  TP=3t  down%=43.22%\n",
+      "h=30s  TP=3t  down%=44.74%\n",
+      "h=30s  TP=3t  down%=46.10%\n",
+      "h=30s  TP=3t  down%=47.15%\n",
       "Saved .npy files in C:\\Users\\jiruszde\\OneDrive\\Main\\1.Projects\\My\\Trading\\Jupyter\\2025-tlob\\data\\NQ\n"
      ]
     }
